@@ -24,7 +24,6 @@ import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.reset;
@@ -34,6 +33,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
+import static org.chromium.chrome.browser.tabmodel.TabGroupTitleUtils.UNSET_TAB_GROUP_TITLE;
 import static org.chromium.chrome.browser.tasks.tab_management.MessageCardViewProperties.DESCRIPTION_TEXT;
 import static org.chromium.chrome.browser.tasks.tab_management.MessageCardViewProperties.MESSAGE_SERVICE_ACTION_PROVIDER;
 import static org.chromium.chrome.browser.tasks.tab_management.MessageCardViewProperties.MESSAGE_SERVICE_DISMISS_ACTION_PROVIDER;
@@ -67,15 +67,15 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 import org.robolectric.Robolectric;
-import org.robolectric.shadows.ShadowLooper;
 
 import org.chromium.base.FeatureOverrides;
 import org.chromium.base.Token;
 import org.chromium.base.supplier.LazyOneshotSupplier;
-import org.chromium.base.supplier.ObservableSupplier;
+import org.chromium.base.supplier.MonotonicObservableSupplier;
 import org.chromium.base.supplier.ObservableSuppliers;
-import org.chromium.base.supplier.SettableObservableSupplier;
+import org.chromium.base.supplier.SettableMonotonicObservableSupplier;
 import org.chromium.base.test.BaseRobolectricTestRunner;
+import org.chromium.base.test.RobolectricUtil;
 import org.chromium.base.test.util.Features.EnableFeatures;
 import org.chromium.base.test.util.UserActionTester;
 import org.chromium.build.annotations.Nullable;
@@ -87,9 +87,12 @@ import org.chromium.chrome.browser.data_sharing.DataSharingServiceFactory;
 import org.chromium.chrome.browser.data_sharing.DataSharingTabManager;
 import org.chromium.chrome.browser.data_sharing.ui.shared_image_tiles.SharedImageTilesCoordinator;
 import org.chromium.chrome.browser.feature_engagement.TrackerFactory;
+import org.chromium.chrome.browser.feedback.FeedbackPolicyManager;
 import org.chromium.chrome.browser.feedback.HelpAndFeedbackLauncher;
 import org.chromium.chrome.browser.feedback.HelpAndFeedbackLauncherFactory;
 import org.chromium.chrome.browser.flags.ChromeFeatureList;
+import org.chromium.chrome.browser.multiwindow.MultiInstanceOrchestrator;
+import org.chromium.chrome.browser.multiwindow.MultiInstanceOrchestratorFactory;
 import org.chromium.chrome.browser.profiles.Profile;
 import org.chromium.chrome.browser.share.ShareDelegate;
 import org.chromium.chrome.browser.signin.services.IdentityServicesProvider;
@@ -104,8 +107,8 @@ import org.chromium.chrome.browser.tab_ui.RecyclerViewPosition;
 import org.chromium.chrome.browser.tabmodel.TabClosingSource;
 import org.chromium.chrome.browser.tabmodel.TabClosureParams;
 import org.chromium.chrome.browser.tabmodel.TabCreator;
-import org.chromium.chrome.browser.tabmodel.TabGroupModelFilter;
-import org.chromium.chrome.browser.tabmodel.TabGroupModelFilterObserver;
+import org.chromium.chrome.browser.tabmodel.TabGroupObserver;
+import org.chromium.chrome.browser.tabmodel.TabGroupTitleUtils;
 import org.chromium.chrome.browser.tabmodel.TabModel;
 import org.chromium.chrome.browser.tabmodel.TabModelObserver;
 import org.chromium.chrome.browser.tabmodel.TabRemover;
@@ -139,7 +142,7 @@ import org.chromium.components.data_sharing.SharedGroupTestHelper;
 import org.chromium.components.data_sharing.member_role.MemberRole;
 import org.chromium.components.feature_engagement.FeatureConstants;
 import org.chromium.components.feature_engagement.Tracker;
-import org.chromium.components.signin.base.CoreAccountInfo;
+import org.chromium.components.signin.base.AccountInfo;
 import org.chromium.components.signin.identitymanager.IdentityManager;
 import org.chromium.components.tab_group_sync.EitherId.EitherGroupId;
 import org.chromium.components.tab_group_sync.LocalTabGroupId;
@@ -158,7 +161,7 @@ import java.util.List;
 import java.util.function.Supplier;
 
 /** Tests for {@link TabGridDialogMediator}. */
-@SuppressWarnings({"ArraysAsListWithZeroOrOneArgument", "ResultOfMethodCallIgnored"})
+@SuppressWarnings({"ArraysAsListWithZeroOrOneArgument"})
 @RunWith(BaseRobolectricTestRunner.class)
 @EnableFeatures(ChromeFeatureList.DATA_SHARING)
 public class TabGridDialogMediatorUnitTest {
@@ -188,9 +191,7 @@ public class TabGridDialogMediatorUnitTest {
     @Mock private View mView;
     @Mock private TabGridDialogMediator.DialogController mDialogController;
     @Mock private TabCreator mTabCreator;
-    @Mock private TabSwitcherResetHandler mTabSwitcherResetHandler;
     @Mock private TabGridDialogMediator.AnimationSourceViewProvider mAnimationSourceViewProvider;
-    @Mock private TabGroupModelFilter mTabGroupModelFilter;
     @Mock private TabModel mTabModel;
     @Mock private TabRemover mTabRemover;
     @Mock private TabListEditorCoordinator.TabListEditorController mTabListEditorController;
@@ -214,13 +215,15 @@ public class TabGridDialogMediatorUnitTest {
     @Mock private BottomSheetController mBottomSheetController;
     @Mock private Tracker mTracker;
     @Mock private HelpAndFeedbackLauncher mHelpAndFeedbackLauncher;
+    @Mock private FeedbackPolicyManager mFeedbackPolicyManager;
     @Mock private Supplier<ShareDelegate> mShareDelegateSupplier;
     @Mock private BookmarkModel mBookmarkModel;
     @Mock private View mCardView;
     @Mock private TabGridContextMenuCoordinator mTabGridContextMenuCoordinator;
+    @Mock private MultiInstanceOrchestrator mMultiInstanceOrchestrator;
 
     @Captor private ArgumentCaptor<TabModelObserver> mTabModelObserverCaptor;
-    @Captor private ArgumentCaptor<TabGroupModelFilterObserver> mTabGroupModelFilterObserverCaptor;
+    @Captor private ArgumentCaptor<TabGroupObserver> mTabGroupObserverCaptor;
     @Captor private ArgumentCaptor<PropertyModel> mCollaborationActivityMessageCardCaptor;
     @Captor private ArgumentCaptor<DataSharingService.Observer> mSharingObserverCaptor;
     @Captor private ArgumentCaptor<PropertyModel> mMessageCardModelCaptor;
@@ -232,15 +235,16 @@ public class TabGridDialogMediatorUnitTest {
 
     @Captor private ArgumentCaptor<BottomSheetObserver> mBottomSheetObserverCaptor;
 
-    private final ObservableSupplier<TabBookmarker> mTabBookmarkerSupplier =
+    @Captor private ArgumentCaptor<List<TabListEditorAction>> mTabListEditorActionListCaptor;
+
+    private final MonotonicObservableSupplier<TabBookmarker> mTabBookmarkerSupplier =
             ObservableSuppliers.alwaysNull();
-    private final SettableObservableSupplier<TabGroupModelFilter>
-            mCurrentTabGroupModelFilterSupplier = ObservableSuppliers.createMonotonic();
+    private final SettableMonotonicObservableSupplier<TabModel> mCurrentTabModelSupplier =
+            ObservableSuppliers.createMonotonic();
 
     private UserActionTester mActionTester;
     private Tab mTab1;
     private Tab mTab2;
-    private List<Tab> mTabList;
     private Activity mActivity;
     private PropertyModel mModel;
     private TabGridDialogMediator mMediator;
@@ -249,9 +253,10 @@ public class TabGridDialogMediatorUnitTest {
     public void setUp() {
         mActionTester = new UserActionTester();
 
+        MultiInstanceOrchestratorFactory.setInstanceForTesting(mMultiInstanceOrchestrator);
         TabGroupSyncFeaturesJni.setInstanceForTesting(mTabGroupSyncFeaturesJniMock);
         BookmarkModel.setInstanceForTesting(mBookmarkModel);
-        doReturn(true).when(mTabGroupSyncFeaturesJniMock).isTabGroupSyncEnabled(mProfile);
+        when(mTabGroupSyncFeaturesJniMock.isTabGroupSyncEnabled(mProfile)).thenReturn(true);
         when(mProfile.getOriginalProfile()).thenReturn(mProfile);
         when(mProfile.isNativeInitialized()).thenReturn(true);
         IdentityServicesProvider.setInstanceForTests(mIdentityServicesProvider);
@@ -268,51 +273,55 @@ public class TabGridDialogMediatorUnitTest {
         TrackerFactory.setTrackerForTests(mTracker);
 
         HelpAndFeedbackLauncherFactory.setInstanceForTesting(mHelpAndFeedbackLauncher);
+        when(mFeedbackPolicyManager.isUserFeedbackAllowed()).thenReturn(true);
+        FeedbackPolicyManager.setInstanceForTesting(mFeedbackPolicyManager);
 
         mTab1 = prepareTab(TAB1_ID, TAB1_TITLE);
         mTab2 = prepareTab(TAB2_ID, TAB2_TITLE);
         List<Tab> tabs1 = new ArrayList<>(Arrays.asList(mTab1));
         List<Tab> tabs2 = new ArrayList<>(Arrays.asList(mTab2));
-        mTabList = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        when(mTabGroupModelFilter.getRepresentativeTabList()).thenReturn(mTabList);
+        List<Tab> tabList = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        when(mTabModel.getRepresentativeTabList()).thenReturn(tabList);
 
-        mCurrentTabGroupModelFilterSupplier.set(mTabGroupModelFilter);
-        doReturn(mProfile).when(mTabModel).getProfile();
-        doReturn(mTabModel).when(mTabGroupModelFilter).getTabModel();
-        doReturn(POSITION1).when(mTabGroupModelFilter).representativeIndexOf(mTab1);
-        doReturn(POSITION2).when(mTabGroupModelFilter).representativeIndexOf(mTab2);
+        mCurrentTabModelSupplier.set(mTabModel);
+        when(mTabModel.getProfile()).thenReturn(mProfile);
+        when(mTabModel.representativeIndexOf(mTab1)).thenReturn(POSITION1);
+        when(mTabModel.representativeIndexOf(mTab2)).thenReturn(POSITION2);
         when(mTabModel.isIncognitoBranded()).thenReturn(false);
         when(mTabModel.getTabRemover()).thenReturn(mTabRemover);
         when(mTabModel.getTabCreator()).thenReturn(mTabCreator);
-        doReturn(mTab1).when(mTabGroupModelFilter).getRepresentativeTabAt(POSITION1);
-        doReturn(mTab2).when(mTabGroupModelFilter).getRepresentativeTabAt(POSITION2);
-        doReturn(tabs1).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
-        doReturn(tabs2).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
-        doReturn(POSITION1).when(mTabGroupModelFilter).getCurrentRepresentativeTabIndex();
-        doReturn(POSITION1).when(mTabModel).index();
-        doReturn(2).when(mTabModel).getCount();
-        doReturn(mTab1).when(mTabModel).getTabAt(POSITION1);
-        doReturn(mTab2).when(mTabModel).getTabAt(POSITION2);
-        doReturn(mTab1).when(mTabModel).getTabById(TAB1_ID);
-        doReturn(mTab2).when(mTabModel).getTabById(TAB2_ID);
-        doReturn(POSITION1).when(mTabModel).indexOf(mTab1);
-        doReturn(POSITION2).when(mTabModel).indexOf(mTab2);
-        doNothing().when(mTabGroupModelFilter).addObserver(mTabModelObserverCaptor.capture());
-        doNothing()
-                .when(mTabGroupModelFilter)
-                .addTabGroupObserver(mTabGroupModelFilterObserverCaptor.capture());
-        doReturn(mView).when(mAnimationSourceViewProvider).getAnimationSourceViewForTabGroup(any());
-        doReturn(mEditable).when(mTitleTextView).getText();
-        doReturn(CUSTOMIZED_DIALOG_TITLE).when(mEditable).toString();
-        doReturn(null).when(mRecyclerViewPositionSupplier).get();
+        when(mTabModel.getRepresentativeTabAt(POSITION1)).thenReturn(mTab1);
+        when(mTabModel.getRepresentativeTabAt(POSITION2)).thenReturn(mTab2);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabs1);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabs2);
+        when(mTabModel.getCurrentRepresentativeTabIndex()).thenReturn(POSITION1);
+        when(mTabModel.index()).thenReturn(POSITION1);
+        when(mTabModel.getCount()).thenReturn(2);
+        when(mTabModel.getTabAt(POSITION1)).thenReturn(mTab1);
+        when(mTabModel.getTabAt(POSITION2)).thenReturn(mTab2);
+        when(mTabModel.getTabById(TAB1_ID)).thenReturn(mTab1);
+        when(mTabModel.getTabById(TAB2_ID)).thenReturn(mTab2);
+        when(mTabModel.indexOf(mTab1)).thenReturn(POSITION1);
+        when(mTabModel.indexOf(mTab2)).thenReturn(POSITION2);
+        doNothing().when(mTabModel).addObserver(mTabModelObserverCaptor.capture());
+        doNothing().when(mTabModel).addTabGroupObserver(mTabGroupObserverCaptor.capture());
+        when(mAnimationSourceViewProvider.getAnimationSourceViewForTabGroup(any()))
+                .thenReturn(mView);
+        when(mTitleTextView.getText()).thenReturn(mEditable);
+        when(mEditable.toString()).thenReturn(CUSTOMIZED_DIALOG_TITLE);
+        when(mRecyclerViewPositionSupplier.get()).thenReturn(null);
+        when(mTabModel.getTabGroupTitle(any(Token.class))).thenReturn(UNSET_TAB_GROUP_TITLE);
+        when(mTabModel.getTabGroupTitle(any(Tab.class))).thenReturn(UNSET_TAB_GROUP_TITLE);
 
         mActivity = Robolectric.buildActivity(TestActivity.class).get();
         mModel = spy(new PropertyModel(TabGridDialogProperties.ALL_KEYS));
-        remakeMediator(/* withResetHandler= */ true, /* withAnimSource= */ true);
+        remakeMediator(
+                /* componentId= */ TabComponentId.TAB_GRID_DIALOG_IN_SWITCHER,
+                /* withAnimSource= */ true);
 
         mMediator.initWithNative(LazyOneshotSupplier.fromValue(mTabListEditorController));
         assertThat(mTabModelObserverCaptor.getAllValues().isEmpty(), equalTo(false));
-        assertThat(mTabGroupModelFilterObserverCaptor.getAllValues().isEmpty(), equalTo(false));
+        assertThat(mTabGroupObserverCaptor.getAllValues().isEmpty(), equalTo(false));
     }
 
     @Test
@@ -369,18 +378,17 @@ public class TabGridDialogMediatorUnitTest {
                 mModel.get(TabGridDialogProperties.MENU_CLICK_LISTENER),
                 instanceOf(View.OnClickListener.class));
 
-        ArgumentCaptor<List<TabListEditorAction>> captor =
-                ArgumentCaptor.forClass((Class) List.class);
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
         mMediator.onToolbarMenuItemClick(
                 R.id.select_tabs,
                 TAB_GROUP_ID,
                 /* collaborationId= */ null,
                 /* listViewTouchTracker= */ null);
-        verify(mTabListEditorController).configureToolbarWithMenuItems(captor.capture());
+        verify(mTabListEditorController)
+                .configureToolbarWithMenuItems(mTabListEditorActionListCaptor.capture());
         verify(mRecyclerViewPositionSupplier, times(1)).get();
         verify(mTabListEditorController).show(any(), eq(new ArrayList<>()), eq(null));
-        List<TabListEditorAction> actions = captor.getValue();
+        List<TabListEditorAction> actions = mTabListEditorActionListCaptor.getValue();
         assertThat(actions.get(0), instanceOf(TabListEditorSelectionAction.class));
         assertThat(actions.get(1), instanceOf(TabListEditorCloseAction.class));
         assertThat(actions.get(2), instanceOf(TabListEditorUngroupAction.class));
@@ -388,7 +396,7 @@ public class TabGridDialogMediatorUnitTest {
 
     @Test
     public void onClickAdd_HasCurrentTab() {
-        createTabGroup(List.of(mTab1), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(List.of(mTab1), TAB_GROUP_ID);
         // Mock that the animation source view is not null, and the dialog is showing.
         mModel.set(TabGridDialogProperties.ANIMATION_SOURCE_VIEW, mView);
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
@@ -422,7 +430,7 @@ public class TabGridDialogMediatorUnitTest {
     public void onClickCollapse() {
         // Show the group of {tab1, tab2} in dialog to trigger the set of scrim observer.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
         assertTrue(mMediator.onReset(tabGroup));
 
         View.OnClickListener listener = mModel.get(TabGridDialogProperties.COLLAPSE_CLICK_LISTENER);
@@ -439,7 +447,7 @@ public class TabGridDialogMediatorUnitTest {
     public void onClickScrim() {
         // Show the group of {tab1, tab2} in dialog to trigger the set of scrim observer.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
         assertTrue(mMediator.onReset(tabGroup));
 
         Runnable scrimClickRunnable = mModel.get(TabGridDialogProperties.SCRIMVIEW_CLICK_RUNNABLE);
@@ -453,6 +461,14 @@ public class TabGridDialogMediatorUnitTest {
     }
 
     @Test
+    public void handleBackPress_DialogNotVisible() {
+        mModel.set(TabGridDialogProperties.IS_DIALOG_VISIBLE, false);
+        when(mTabListEditorController.isVisible()).thenReturn(false);
+
+        assertFalse(mMediator.handleBackPress());
+    }
+
+    @Test
     @SuppressWarnings("DirectInvocationOnMock")
     public void onTitleTextChange_WithoutFocus() {
         TextWatcher textWatcher = mModel.get(TabGridDialogProperties.TITLE_TEXT_WATCHER);
@@ -463,9 +479,9 @@ public class TabGridDialogMediatorUnitTest {
 
         textWatcher.afterTextChanged(mEditable);
 
-        // mTabGroupModelFilter#setTabGroupTitle() should not react to text change when there is no
+        // mTabModel#setTabGroupTitle() should not react to text change when there is no
         // focus.
-        verify(mTabGroupModelFilter, never()).setTabGroupTitle(any(), anyString());
+        verify(mTabModel, never()).setTabGroupTitle(any(), anyString());
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(TAB1_TITLE));
         assertThat(mMediator.getCurrentGroupModifiedTitleForTesting(), equalTo(null));
     }
@@ -500,24 +516,7 @@ public class TabGridDialogMediatorUnitTest {
         listener.onFocusChange(mTitleTextView, true);
 
         assertThat(mMediator.getIsUpdatingTitleForTesting(), equalTo(true));
-    }
-
-    @Test
-    public void onKeyBoardVisibilityChanged_updateTextAndKeyboard() {
-        KeyboardVisibilityDelegate.KeyboardVisibilityListener listener =
-                mMediator.getKeyboardVisibilityListenerForTesting();
-        mModel.set(TabGridDialogProperties.TITLE_CURSOR_VISIBILITY, false);
-        mModel.set(TabGridDialogProperties.IS_TITLE_TEXT_FOCUSED, false);
-
-        listener.keyboardVisibilityChanged(true);
         assertThat(mModel.get(TabGridDialogProperties.TITLE_CURSOR_VISIBILITY), equalTo(true));
-        assertThat(mModel.get(TabGridDialogProperties.IS_TITLE_TEXT_FOCUSED), equalTo(false));
-        assertThat(mModel.get(TabGridDialogProperties.IS_KEYBOARD_VISIBLE), equalTo(false));
-
-        listener.keyboardVisibilityChanged(false);
-        assertThat(mModel.get(TabGridDialogProperties.TITLE_CURSOR_VISIBILITY), equalTo(false));
-        assertThat(mModel.get(TabGridDialogProperties.IS_TITLE_TEXT_FOCUSED), equalTo(false));
-        assertThat(mModel.get(TabGridDialogProperties.IS_KEYBOARD_VISIBLE), equalTo(false));
     }
 
     @Test
@@ -529,7 +528,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.HEADER_TITLE, TAB1_TITLE);
 
         // Mock that tab1 is in a group.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
 
         // Mock that keyboard shows and group title is updated.
         keyboardVisibilityListener.keyboardVisibilityChanged(true);
@@ -543,8 +542,7 @@ public class TabGridDialogMediatorUnitTest {
 
         keyboardVisibilityListener.keyboardVisibilityChanged(false);
 
-        verify(mTabGroupModelFilter)
-                .setTabGroupTitle(eq(TAB_GROUP_ID), eq(CUSTOMIZED_DIALOG_TITLE));
+        verify(mTabModel).setTabGroupTitle(eq(TAB_GROUP_ID), eq(CUSTOMIZED_DIALOG_TITLE));
         assertThat(
                 mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(CUSTOMIZED_DIALOG_TITLE));
     }
@@ -558,7 +556,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.HEADER_TITLE, TAB1_TITLE);
 
         // Mock that tab1 is in a group.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1)), TAB_GROUP_ID);
 
         // Mock that keyboard shows and group title is updated.
         keyboardVisibilityListener.keyboardVisibilityChanged(true);
@@ -572,8 +570,7 @@ public class TabGridDialogMediatorUnitTest {
 
         keyboardVisibilityListener.keyboardVisibilityChanged(false);
 
-        verify(mTabGroupModelFilter)
-                .setTabGroupTitle(eq(TAB_GROUP_ID), eq(CUSTOMIZED_DIALOG_TITLE));
+        verify(mTabModel).setTabGroupTitle(eq(TAB_GROUP_ID), eq(CUSTOMIZED_DIALOG_TITLE));
         assertThat(
                 mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(CUSTOMIZED_DIALOG_TITLE));
     }
@@ -587,7 +584,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.HEADER_TITLE, TAB1_TITLE);
 
         // Mock that tab1 is in a group.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
 
         // Mock that keyboard shows but title edit text is not focused.
         keyboardVisibilityListener.keyboardVisibilityChanged(true);
@@ -596,7 +593,7 @@ public class TabGridDialogMediatorUnitTest {
 
         keyboardVisibilityListener.keyboardVisibilityChanged(false);
 
-        verify(mTabGroupModelFilter, never()).setTabGroupTitle(any(), anyString());
+        verify(mTabModel, never()).setTabGroupTitle(any(), anyString());
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(TAB1_TITLE));
     }
 
@@ -607,7 +604,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.ANIMATION_SOURCE_VIEW, mView);
         mModel.set(TabGridDialogProperties.IS_DIALOG_VISIBLE, true);
 
-        when(mTabGroupModelFilter.isTabModelRestored()).thenReturn(true);
+        when(mTabModel.isTabModelRestored()).thenReturn(true);
         mTabModelObserverCaptor
                 .getValue()
                 .didAddTab(
@@ -632,7 +629,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.ANIMATION_SOURCE_VIEW, mView);
         mModel.set(TabGridDialogProperties.IS_DIALOG_VISIBLE, true);
 
-        when(mTabGroupModelFilter.isTabModelRestored()).thenReturn(true);
+        when(mTabModel.isTabModelRestored()).thenReturn(true);
         mTabModelObserverCaptor
                 .getValue()
                 .didAddTab(
@@ -646,14 +643,12 @@ public class TabGridDialogMediatorUnitTest {
 
     @Test
     public void tabClosure_NotLast_NotCurrent() {
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
         // Mock that tab1 and tab2 are in the same group, but tab2 just gets closed.
-        doReturn(new ArrayList<>(Arrays.asList(mTab1)))
-                .when(mTabGroupModelFilter)
-                .getTabsInGroup(TAB_GROUP_ID);
-        doReturn(new ArrayList<>(Arrays.asList(mTab1)))
-                .when(mTabGroupModelFilter)
-                .getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID))
+                .thenReturn(new ArrayList<>(Arrays.asList(mTab1)));
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID))
+                .thenReturn(new ArrayList<>(Arrays.asList(mTab1)));
         // Mock tab1 is the current tab for the dialog.
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
         // Mock dialog title is null and the dialog is showing.
@@ -664,16 +659,14 @@ public class TabGridDialogMediatorUnitTest {
 
         assertThat(mMediator.getCurrentTabGroupIdForTesting(), equalTo(TAB_GROUP_ID));
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(DIALOG_TITLE1));
-        verify(mTabSwitcherResetHandler).resetWithListOfTabs(mTabList);
     }
 
     @Test
     public void tabClosure_NotLast_Current() {
         // Mock that tab1 and tab2 are in the same group, but tab2 just gets closed.
-        createTabGroup(List.of(mTab1, mTab2), TAB1_ID, TAB_GROUP_ID);
-        doReturn(new ArrayList<>(Arrays.asList(mTab1)))
-                .when(mTabGroupModelFilter)
-                .getTabsInGroup(TAB_GROUP_ID);
+        createTabGroup(List.of(mTab1, mTab2), TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID))
+                .thenReturn(new ArrayList<>(Arrays.asList(mTab1)));
 
         // Mock tab2 is the current tab for the dialog.
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
@@ -685,13 +678,12 @@ public class TabGridDialogMediatorUnitTest {
 
         assertThat(mMediator.getCurrentTabGroupIdForTesting(), equalTo(TAB_GROUP_ID));
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(DIALOG_TITLE1));
-        verify(mTabSwitcherResetHandler).resetWithListOfTabs(mTabList);
     }
 
     @Test
     public void tabClosure_Last_Current() {
         // Mock that tab1 is the last tab in the group and it just gets closed.
-        doReturn(new ArrayList<>()).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(new ArrayList<>());
         // As last tab in the group, tab1 is definitely the current tab for the dialog.
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
         when(mTab1.getTabGroupId()).thenReturn(TAB_GROUP_ID);
@@ -707,7 +699,6 @@ public class TabGridDialogMediatorUnitTest {
         // Simulate the animation finishing.
         mModel.get(TabGridDialogProperties.VISIBILITY_LISTENER).finishedHidingDialogView();
         verify(mDialogController).resetWithListOfTabs(null);
-        verify(mTabSwitcherResetHandler, never()).resetWithListOfTabs(mTabList);
 
         assertFalse(mMediator.onReset(null));
         assertNull(mMediator.getCurrentTabGroupIdForTesting());
@@ -719,18 +710,18 @@ public class TabGridDialogMediatorUnitTest {
         // Mock that tab1, tab2 and newTab are in the same group and tab1 is the root tab.
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2, newTab));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         // Mock that newTab just get closed.
         List<Tab> tabGroupAfterClosure = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        doReturn(tabGroupAfterClosure).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
-        doReturn(tabGroupAfterClosure).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabGroupAfterClosure);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabGroupAfterClosure);
 
         // Mock that newTab is the current tab for the dialog.
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
 
         // Mock that we have a stored title stored with reference to root ID of tab1.
-        doReturn(CUSTOMIZED_DIALOG_TITLE).when(mTabGroupModelFilter).getTabGroupTitle(TAB_GROUP_ID);
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(CUSTOMIZED_DIALOG_TITLE);
 
         mTabModelObserverCaptor.getValue().didRemoveTabForClosure(newTab);
 
@@ -745,18 +736,18 @@ public class TabGridDialogMediatorUnitTest {
         // Mock that tab1, tab2 and newTab are in the same group and newTab is the root tab.
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2, newTab));
-        createTabGroup(tabGroup, TAB3_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         // Mock that newTab just get closed.
         List<Tab> tabGroupAfterClosure = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        doReturn(tabGroupAfterClosure).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
-        doReturn(tabGroupAfterClosure).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabGroupAfterClosure);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabGroupAfterClosure);
 
         // Mock that newTab is the current tab for the dialog.
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
 
         // Mock that we have a stored title stored with reference to root ID of newTab.
-        doReturn(CUSTOMIZED_DIALOG_TITLE).when(mTabGroupModelFilter).getTabGroupTitle(TAB_GROUP_ID);
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(CUSTOMIZED_DIALOG_TITLE);
 
         mTabModelObserverCaptor.getValue().didRemoveTabForClosure(newTab);
 
@@ -770,17 +761,17 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.IS_DIALOG_VISIBLE, true);
         // Mock that tab1, tab2 are in the same group and tab1 is the root tab.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         // Mock that tab2 just get closed.
         List<Tab> tabGroupAfterClosure = new ArrayList<>(Arrays.asList(mTab1));
-        doReturn(tabGroupAfterClosure).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabGroupAfterClosure);
 
         // Mock that tab2 is the current tab for the dialog.
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
 
         // Mock that we have a stored title stored with reference to root ID of tab1.
-        doReturn(CUSTOMIZED_DIALOG_TITLE).when(mTabGroupModelFilter).getTabGroupTitle(TAB_GROUP_ID);
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(CUSTOMIZED_DIALOG_TITLE);
 
         mTabModelObserverCaptor.getValue().didRemoveTabForClosure(mTab2);
 
@@ -798,8 +789,7 @@ public class TabGridDialogMediatorUnitTest {
         mTabModelObserverCaptor.getValue().tabClosureUndone(mTab1);
 
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(DIALOG_TITLE1));
-        verify(mTabSwitcherResetHandler).resetWithListOfTabs(mTabList);
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mSnackbarManager).dismissSnackbars(eq(mMediator), eq(TAB1_ID));
     }
 
@@ -811,19 +801,18 @@ public class TabGridDialogMediatorUnitTest {
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
 
         // Mock that we have a stored title stored with reference to root ID of tab1.
-        doReturn(CUSTOMIZED_DIALOG_TITLE).when(mTabGroupModelFilter).getTabGroupTitle(TAB_GROUP_ID);
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(CUSTOMIZED_DIALOG_TITLE);
 
         // Mock that tab1 and tab2 are in the same group, and we are undoing tab2.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
         mTabModelObserverCaptor.getValue().tabClosureUndone(mTab2);
 
         // If current group has a stored title, dialog title should be set to stored title when
         // undoing a closure.
         assertThat(
                 mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(CUSTOMIZED_DIALOG_TITLE));
-        verify(mTabSwitcherResetHandler).resetWithListOfTabs(mTabList);
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mSnackbarManager).dismissSnackbars(eq(mMediator), eq(TAB2_ID));
     }
 
@@ -839,8 +828,7 @@ public class TabGridDialogMediatorUnitTest {
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(DIALOG_TITLE1));
         // Dialog should still be hidden.
         assertThat(mModel.get(TabGridDialogProperties.IS_DIALOG_VISIBLE), equalTo(false));
-        verify(mTabSwitcherResetHandler, never()).resetWithListOfTabs(mTabList);
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mSnackbarManager).dismissSnackbars(eq(mMediator), eq(TAB1_ID));
     }
 
@@ -848,7 +836,7 @@ public class TabGridDialogMediatorUnitTest {
     public void tabClosureCommitted() {
         mTabModelObserverCaptor.getValue().tabClosureCommitted(mTab1);
 
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mSnackbarManager).dismissSnackbars(eq(mMediator), eq(TAB1_ID));
     }
 
@@ -859,7 +847,7 @@ public class TabGridDialogMediatorUnitTest {
                 .getValue()
                 .onFinishingMultipleTabClosure(tabs, /* canRestore= */ true);
 
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mSnackbarManager).dismissSnackbars(eq(mMediator), eq(tabs));
     }
 
@@ -870,7 +858,7 @@ public class TabGridDialogMediatorUnitTest {
                 .getValue()
                 .onFinishingMultipleTabClosure(tabs, /* canRestore= */ true);
 
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mSnackbarManager).dismissSnackbars(eq(mMediator), eq(TAB1_ID));
     }
 
@@ -878,7 +866,7 @@ public class TabGridDialogMediatorUnitTest {
     public void allTabsClosureCommitted() {
         mTabModelObserverCaptor.getValue().allTabsClosureCommitted(false);
 
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mSnackbarManager).dismissSnackbars(eq(mMediator));
     }
 
@@ -917,7 +905,9 @@ public class TabGridDialogMediatorUnitTest {
 
     @Test
     public void tabSelection_stripContext() {
-        remakeMediator(/* withResetHandler= */ false, /* withAnimSource= */ true);
+        remakeMediator(
+                /* componentId= */ TabComponentId.TAB_GRID_DIALOG_FROM_STRIP,
+                /* withAnimSource= */ true);
 
         mMediator.initWithNative(LazyOneshotSupplier.fromValue(mTabListEditorController));
         // Mock that the animation source view is not null, and the dialog is showing.
@@ -1034,7 +1024,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.IS_DIALOG_VISIBLE, true);
 
         // Mock that tab1 is in a group.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
 
         // Mock that we have a modified group title before dialog is hidden.
         TextWatcher textWatcher = mModel.get(TabGridDialogProperties.TITLE_TEXT_WATCHER);
@@ -1048,8 +1038,7 @@ public class TabGridDialogMediatorUnitTest {
 
         mMediator.hideDialog(false);
 
-        verify(mTabGroupModelFilter)
-                .setTabGroupTitle(eq(TAB_GROUP_ID), eq(CUSTOMIZED_DIALOG_TITLE));
+        verify(mTabModel).setTabGroupTitle(eq(TAB_GROUP_ID), eq(CUSTOMIZED_DIALOG_TITLE));
         assertThat(
                 mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(CUSTOMIZED_DIALOG_TITLE));
     }
@@ -1061,7 +1050,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.IS_DIALOG_VISIBLE, true);
 
         // Mock that tab1 is in a group.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
 
         // Mock that we have a modified group title before dialog is hidden.
         TextWatcher textWatcher = mModel.get(TabGridDialogProperties.TITLE_TEXT_WATCHER);
@@ -1074,9 +1063,9 @@ public class TabGridDialogMediatorUnitTest {
                 equalTo(CUSTOMIZED_DIALOG_TITLE));
 
         // Now mark the group as deleted and the filter should not be called.
-        when(mTabGroupModelFilter.tabGroupExists(TAB_GROUP_ID)).thenReturn(false);
+        when(mTabModel.tabGroupExists(TAB_GROUP_ID)).thenReturn(false);
         mMediator.hideDialog(false);
-        verify(mTabGroupModelFilter, never()).setTabGroupTitle(any(), anyString());
+        verify(mTabModel, never()).setTabGroupTitle(any(), anyString());
     }
 
     @Test
@@ -1086,7 +1075,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.IS_DIALOG_VISIBLE, true);
 
         // Mock that tab1 is in a group.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
 
         // Mock that we have a modified group title before share button is clicked.
         TextWatcher textWatcher = mModel.get(TabGridDialogProperties.TITLE_TEXT_WATCHER);
@@ -1101,9 +1090,8 @@ public class TabGridDialogMediatorUnitTest {
         // Click share button.
         mModel.get(TabGridDialogProperties.SHARE_BUTTON_CLICK_LISTENER).onClick(null);
 
-        // Verify that the modified title is committed to the TabGroupModelFilter.
-        verify(mTabGroupModelFilter)
-                .setTabGroupTitle(eq(TAB_GROUP_ID), eq(CUSTOMIZED_DIALOG_TITLE));
+        // Verify that the modified title is committed to the TabModel.
+        verify(mTabModel).setTabGroupTitle(eq(TAB_GROUP_ID), eq(CUSTOMIZED_DIALOG_TITLE));
         assertThat(
                 mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(CUSTOMIZED_DIALOG_TITLE));
     }
@@ -1115,14 +1103,14 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.IS_DIALOG_VISIBLE, true);
 
         // Mock that tab1 is in a group.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
 
         // Mock that we have a modified group title which is an empty string.
         TextWatcher textWatcher = mModel.get(TabGridDialogProperties.TITLE_TEXT_WATCHER);
         View.OnFocusChangeListener onFocusChangeListener =
                 mModel.get(TabGridDialogProperties.TITLE_TEXT_ON_FOCUS_LISTENER);
         onFocusChangeListener.onFocusChange(mTitleTextView, true);
-        doReturn("").when(mEditable).toString();
+        when(mEditable.toString()).thenReturn("");
         textWatcher.afterTextChanged(mEditable);
         assertThat(mMediator.getCurrentGroupModifiedTitleForTesting(), equalTo(""));
 
@@ -1130,9 +1118,9 @@ public class TabGridDialogMediatorUnitTest {
 
         // When updated title is a empty string, delete stored title and restore default title in
         // PropertyModel.
-        verify(mTabGroupModelFilter).deleteTabGroupTitle(eq(TAB_GROUP_ID));
+        verify(mTabModel).deleteTabGroupTitle(eq(TAB_GROUP_ID));
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(DIALOG_TITLE2));
-        verify(mTabGroupModelFilter).setTabGroupTitle(eq(TAB_GROUP_ID), eq(null));
+        verify(mTabModel).setTabGroupTitle(eq(TAB_GROUP_ID), eq(UNSET_TAB_GROUP_TITLE));
     }
 
     @Test
@@ -1141,12 +1129,12 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.HEADER_TITLE, TAB1_TITLE);
 
         // Mock that tab1 is in a group.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1, mTab2)), TAB_GROUP_ID);
 
         mMediator.hideDialog(false);
 
         // When title is not updated, don't store title when hide dialog.
-        verify(mTabGroupModelFilter, never()).setTabGroupTitle(any(), anyString());
+        verify(mTabModel, never()).setTabGroupTitle(any(), anyString());
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(TAB1_TITLE));
     }
 
@@ -1156,7 +1144,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.HEADER_TITLE, TAB1_TITLE);
 
         // Mock that the last tab in the group is closed.
-        doReturn(new ArrayList<>()).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(new ArrayList<>());
 
         // Mock that we have a modified group title before dialog is hidden.
         TextWatcher textWatcher = mModel.get(TabGridDialogProperties.TITLE_TEXT_WATCHER);
@@ -1171,7 +1159,7 @@ public class TabGridDialogMediatorUnitTest {
         mMediator.hideDialog(false);
 
         // Skip storing dialog title when the last tab is closing.
-        verify(mTabGroupModelFilter, never()).setTabGroupTitle(any(), anyString());
+        verify(mTabModel, never()).setTabGroupTitle(any(), anyString());
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(TAB1_TITLE));
     }
 
@@ -1181,7 +1169,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.HEADER_TITLE, TAB1_TITLE);
 
         // Mock that tab1 is now a single tab.
-        createTabGroup(new ArrayList<>(Arrays.asList(mTab1)), TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(new ArrayList<>(Arrays.asList(mTab1)), TAB_GROUP_ID);
 
         // Mock that we have a modified group title before dialog is hidden.
         TextWatcher textWatcher = mModel.get(TabGridDialogProperties.TITLE_TEXT_WATCHER);
@@ -1196,7 +1184,7 @@ public class TabGridDialogMediatorUnitTest {
         mMediator.hideDialog(false);
 
         // Skip storing dialog title when this group becomes a single tab.
-        verify(mTabGroupModelFilter, never()).setTabGroupTitle(any(), anyString());
+        verify(mTabModel, never()).setTabGroupTitle(any(), anyString());
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(TAB1_TITLE));
     }
 
@@ -1247,7 +1235,7 @@ public class TabGridDialogMediatorUnitTest {
     public void showDialog_FromGts_setSelectedColor() {
         // Mock that tab1 and tab2 are in a group.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         // Mock that we have a stored color stored with reference to root ID of tab1.
         mModel.set(TabGridDialogProperties.TAB_GROUP_COLOR_ID, COLOR_2);
@@ -1257,7 +1245,7 @@ public class TabGridDialogMediatorUnitTest {
 
         // Assert that the color has changed both in the property model and the model filter.
         assertThat(mModel.get(TabGridDialogProperties.TAB_GROUP_COLOR_ID), equalTo(COLOR_3));
-        verify(mTabGroupModelFilter).setTabGroupColor(TAB_GROUP_ID, COLOR_3);
+        verify(mTabModel).setTabGroupColor(TAB_GROUP_ID, COLOR_3);
     }
 
     @Test
@@ -1270,9 +1258,9 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.SCRIMVIEW_CLICK_RUNNABLE, null);
         // Mock that tab1 and tab2 are in a group.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
-        when(mTabGroupModelFilter.getTabGroupColorWithFallback(TAB_GROUP_ID)).thenReturn(COLOR_2);
+        when(mTabModel.getTabGroupColorWithFallback(TAB_GROUP_ID)).thenReturn(COLOR_2);
         assertTrue(mMediator.onReset(tabGroup));
 
         // Assert that a color and the incognito status were set.
@@ -1302,10 +1290,10 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.SCRIMVIEW_CLICK_RUNNABLE, null);
         // Mock that tab1 and tab2 are in a group.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         // Mock that we have a stored title stored with reference to root ID of tab1.
-        doReturn(CUSTOMIZED_DIALOG_TITLE).when(mTabGroupModelFilter).getTabGroupTitle(TAB_GROUP_ID);
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(CUSTOMIZED_DIALOG_TITLE);
 
         assertTrue(mMediator.onReset(tabGroup));
 
@@ -1325,7 +1313,9 @@ public class TabGridDialogMediatorUnitTest {
     public void showDialog_FromStrip() {
         // For strip we don't play zoom-in/zoom-out for show/hide dialog, and thus
         // the animationParamsProvider is null.
-        remakeMediator(/* withResetHandler= */ true, /* withAnimSource= */ false);
+        remakeMediator(
+                /* componentId= */ TabComponentId.TAB_GRID_DIALOG_FROM_STRIP,
+                /* withAnimSource= */ false);
         mMediator.initWithNative(LazyOneshotSupplier.fromValue(mTabListEditorController));
 
         // Mock that the dialog is hidden and animation source view, header title and scrim click
@@ -1336,9 +1326,9 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.SCRIMVIEW_CLICK_RUNNABLE, null);
         // Mock that tab1 and tab2 are in a group.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
-        when(mTabGroupModelFilter.getTabGroupColorWithFallback(TAB_GROUP_ID)).thenReturn(COLOR_2);
+        when(mTabModel.getTabGroupColorWithFallback(TAB_GROUP_ID)).thenReturn(COLOR_2);
         assertTrue(mMediator.onReset(tabGroup));
 
         // Assert that a color and the incognito status were set.
@@ -1362,7 +1352,9 @@ public class TabGridDialogMediatorUnitTest {
     public void showDialog_FromStrip_WithStoredTitle() {
         // For strip we don't play zoom-in/zoom-out for show/hide dialog, and thus
         // the animationParamsProvider is null.
-        remakeMediator(/* withResetHandler= */ true, /* withAnimSource= */ false);
+        remakeMediator(
+                /* componentId= */ TabComponentId.TAB_GRID_DIALOG_FROM_STRIP,
+                /* withAnimSource= */ false);
         mMediator.initWithNative(LazyOneshotSupplier.fromValue(mTabListEditorController));
         // Mock that the dialog is hidden and animation source view, header title and scrim click
         // runnable are all null.
@@ -1372,10 +1364,10 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.SCRIMVIEW_CLICK_RUNNABLE, null);
         // Mock that tab1 and tab2 are in a group.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         // Mock that we have a stored title stored with reference to root ID of tab1.
-        doReturn(CUSTOMIZED_DIALOG_TITLE).when(mTabGroupModelFilter).getTabGroupTitle(TAB_GROUP_ID);
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(CUSTOMIZED_DIALOG_TITLE);
 
         assertTrue(mMediator.onReset(tabGroup));
 
@@ -1395,7 +1387,9 @@ public class TabGridDialogMediatorUnitTest {
     public void showDialog_FromStrip_SetupAnimation() {
         // For strip we don't play zoom-in/zoom-out for show/hide dialog, and thus
         // the animationParamsProvider is null.
-        remakeMediator(/* withResetHandler= */ true, /* withAnimSource= */ false);
+        remakeMediator(
+                /* componentId= */ TabComponentId.TAB_GRID_DIALOG_FROM_STRIP,
+                /* withAnimSource= */ false);
         mMediator.initWithNative(LazyOneshotSupplier.fromValue(mTabListEditorController));
         // Mock that the dialog is hidden and animation source view is set to some mock view for
         // testing purpose.
@@ -1403,7 +1397,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.ANIMATION_SOURCE_VIEW, mock(View.class));
         // Mock that tab1 and tab2 are in a group.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         assertTrue(mMediator.onReset(tabGroup));
 
@@ -1419,7 +1413,7 @@ public class TabGridDialogMediatorUnitTest {
         mModel.set(TabGridDialogProperties.IS_TITLE_TEXT_FOCUSED, true);
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         mMediator.onToolbarMenuItemClick(
                 R.id.select_tabs,
@@ -1439,7 +1433,7 @@ public class TabGridDialogMediatorUnitTest {
 
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         mMediator.onToolbarMenuItemClick(
                 R.id.edit_group_name,
@@ -1454,7 +1448,7 @@ public class TabGridDialogMediatorUnitTest {
     public void testDialogToolbarMenu_EditGroupColor() {
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         mMediator.onToolbarMenuItemClick(
                 R.id.edit_group_color,
@@ -1568,7 +1562,7 @@ public class TabGridDialogMediatorUnitTest {
         // Setup
         mMediator.setCurrentTabGroupIdForTesting(TAB_GROUP_ID);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         // Act
         mMediator.onToolbarMenuItemClick(
@@ -1578,8 +1572,7 @@ public class TabGridDialogMediatorUnitTest {
         verify(mTabRemover)
                 .closeTabs(
                         eq(
-                                TabClosureParams.forCloseTabGroup(
-                                                mTabGroupModelFilter, TAB_GROUP_ID)
+                                TabClosureParams.forCloseTabGroup(mTabModel, TAB_GROUP_ID)
                                         .allowUndo(shouldAllowUndo)
                                         .hideTabGroups(shouldHideTabGroups)
                                         .build()),
@@ -1620,10 +1613,9 @@ public class TabGridDialogMediatorUnitTest {
     public void testDialogToolbarMenu_DeleteSharedGroup() {
         resetForDataSharing(/* isShared= */ true, GROUP_MEMBER1);
 
-        when(mTabGroupModelFilter.getTabGroupTitle(any(Token.class))).thenReturn(GROUP_TITLE);
-        CoreAccountInfo coreAccountInfo =
-                CoreAccountInfo.createFromEmailAndGaiaId(EMAIL1, GAIA_ID1);
-        when(mIdentityManager.getPrimaryAccountInfo(anyInt())).thenReturn(coreAccountInfo);
+        when(mTabModel.getTabGroupTitle(any(Token.class))).thenReturn(GROUP_TITLE);
+        AccountInfo accountInfo = new AccountInfo.Builder(EMAIL1, GAIA_ID1).build();
+        when(mIdentityManager.getPrimaryAccountInfo()).thenReturn(accountInfo);
         when(mCollaborationService.getCurrentUserRoleForGroup(COLLABORATION_ID1))
                 .thenReturn(MemberRole.OWNER);
 
@@ -1639,10 +1631,9 @@ public class TabGridDialogMediatorUnitTest {
     public void testDialogToolbarMenu_LeaveSharedGroup() {
         resetForDataSharing(/* isShared= */ true, GROUP_MEMBER1, GROUP_MEMBER2);
 
-        when(mTabGroupModelFilter.getTabGroupTitle(any(Token.class))).thenReturn(GROUP_TITLE);
-        CoreAccountInfo coreAccountInfo =
-                CoreAccountInfo.createFromEmailAndGaiaId(EMAIL2, GAIA_ID2);
-        when(mIdentityManager.getPrimaryAccountInfo(anyInt())).thenReturn(coreAccountInfo);
+        when(mTabModel.getTabGroupTitle(any(Token.class))).thenReturn(GROUP_TITLE);
+        AccountInfo accountInfo = new AccountInfo.Builder(EMAIL2, GAIA_ID2).build();
+        when(mIdentityManager.getPrimaryAccountInfo()).thenReturn(accountInfo);
         when(mCollaborationService.getCurrentUserRoleForGroup(COLLABORATION_ID1))
                 .thenReturn(MemberRole.MEMBER);
 
@@ -1689,14 +1680,14 @@ public class TabGridDialogMediatorUnitTest {
         // Mock that tab1, tab2 and newTab are in the same group and newTab is the root tab.
         Tab newTab = prepareTab(TAB3_ID, TAB3_TITLE);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2, newTab));
-        createTabGroup(tabGroup, TAB2_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         int groupIndex = 3;
         // Mock that mTab2 is the current tab for the dialog.
-        when(mTabGroupModelFilter.representativeIndexOf(mTab1)).thenReturn(groupIndex);
-        when(mTabGroupModelFilter.getRepresentativeTabAt(groupIndex)).thenReturn(mTab2);
-        when(mTabGroupModelFilter.getCurrentRepresentativeTab()).thenReturn(mTab2);
-        doReturn(tabGroup).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.representativeIndexOf(mTab1)).thenReturn(groupIndex);
+        when(mTabModel.getRepresentativeTabAt(groupIndex)).thenReturn(mTab2);
+        when(mTabModel.getCurrentRepresentativeTab()).thenReturn(mTab2);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabGroup);
 
         // Reset and confirm scroll index.
         assertTrue(mMediator.onReset(tabGroup));
@@ -1708,7 +1699,7 @@ public class TabGridDialogMediatorUnitTest {
     public void testTabUngroupBarText() {
         // Mock that tab1 and tab2 are in the same group.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         assertTrue(mMediator.onReset(tabGroup));
         // Check that the text indicates that this is not the last tab in the group.
@@ -1718,7 +1709,7 @@ public class TabGridDialogMediatorUnitTest {
 
         // Mock that tab1 is the only tab that remains in the group.
         List<Tab> tabGroupAfterUngroup = new ArrayList<>(Arrays.asList(mTab1));
-        doReturn(tabGroupAfterUngroup).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabGroupAfterUngroup);
 
         assertTrue(mMediator.onReset(tabGroupAfterUngroup));
         // Check that the text indicates that this is the last tab in the group.
@@ -1732,7 +1723,7 @@ public class TabGridDialogMediatorUnitTest {
         when(mCollaborationService.getCurrentUserRoleForGroup(any())).thenReturn(MemberRole.MEMBER);
         // Mock that tab1 and tab2 are in the same group.
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
         resetForDataSharing(/* isShared= */ true, GROUP_MEMBER1);
 
         // Check that the text indicates that this is not the last tab in the group.
@@ -1742,7 +1733,7 @@ public class TabGridDialogMediatorUnitTest {
 
         // Mock that tab1 is the only tab that remains in the group.
         List<Tab> tabGroupAfterUngroup = new ArrayList<>(Arrays.asList(mTab1));
-        doReturn(tabGroupAfterUngroup).when(mTabGroupModelFilter).getTabsInGroup(TAB_GROUP_ID);
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(tabGroupAfterUngroup);
 
         assertTrue(mMediator.onReset(tabGroupAfterUngroup));
         // Check that the text indicates that this is the last tab in the group.
@@ -1753,46 +1744,111 @@ public class TabGridDialogMediatorUnitTest {
 
     @Test
     public void testTabGroupColorUpdated() {
-        int rootId = TAB1_ID;
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, rootId, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         assertTrue(mMediator.onReset(tabGroup));
 
-        assertNotEquals(mModel.get(TabGridDialogProperties.TAB_GROUP_COLOR_ID), COLOR_3);
+        assertNotEquals(COLOR_3, mModel.get(TabGridDialogProperties.TAB_GROUP_COLOR_ID));
 
-        mTabGroupModelFilterObserverCaptor.getValue().didChangeTabGroupColor(TAB_GROUP_ID, COLOR_3);
+        mTabGroupObserverCaptor.getValue().didChangeTabGroupColor(TAB_GROUP_ID, COLOR_3);
 
         assertThat(mModel.get(TabGridDialogProperties.TAB_GROUP_COLOR_ID), equalTo(COLOR_3));
     }
 
     @Test
     public void testTabGroupTitleUpdated() {
-        int rootId = TAB1_ID;
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, rootId, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
-        when(mTabGroupModelFilter.getTabGroupTitle(TAB_GROUP_ID))
-                .thenReturn(CUSTOMIZED_DIALOG_TITLE);
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(CUSTOMIZED_DIALOG_TITLE);
         assertTrue(mMediator.onReset(tabGroup));
 
         assertEquals(CUSTOMIZED_DIALOG_TITLE, mModel.get(TabGridDialogProperties.HEADER_TITLE));
 
         String newTitle = "BAR";
-        when(mTabGroupModelFilter.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(newTitle);
-        mTabGroupModelFilterObserverCaptor
-                .getValue()
-                .didChangeTabGroupTitle(TAB_GROUP_ID, newTitle);
+        when(mTabModel.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(newTitle);
+        mTabGroupObserverCaptor.getValue().didChangeTabGroupTitle(TAB_GROUP_ID, newTitle);
 
         assertThat(mModel.get(TabGridDialogProperties.HEADER_TITLE), equalTo(newTitle));
+    }
+
+    @Test
+    public void testTabGroupObserver_didMoveTabOutOfGroup() {
+        List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        createTabGroup(tabGroup, TAB_GROUP_ID);
+        assertTrue(mMediator.onReset(tabGroup));
+
+        // Simulate moving mTab2 out of group so group now only has mTab1.
+        List<Tab> remainingTabs = new ArrayList<>(Arrays.asList(mTab1));
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(remainingTabs);
+
+        mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(mTab2, 1);
+
+        // Header title should update to reflect 1 tab.
+        assertEquals(
+                TabGroupTitleUtils.getDefaultTitle(mActivity, 1),
+                mModel.get(TabGridDialogProperties.HEADER_TITLE));
+    }
+
+    @Test
+    public void testTabGroupObserver_didMoveTabOutOfGroup_LastTabClosesDialog() {
+        List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1));
+        createTabGroup(tabGroup, TAB_GROUP_ID);
+        assertTrue(mMediator.onReset(tabGroup));
+
+        // Simulate moving the last tab out of the group.
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(List.of());
+
+        mTabGroupObserverCaptor.getValue().didMoveTabOutOfGroup(mTab1, 0);
+
+        // Verify dialog is hidden/dismissed.
+        assertFalse(mModel.get(TabGridDialogProperties.IS_DIALOG_VISIBLE));
+    }
+
+    @Test
+    public void testTabGroupObserver_didMergeTabToGroup() {
+        List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1));
+        createTabGroup(tabGroup, TAB_GROUP_ID);
+        assertTrue(mMediator.onReset(tabGroup));
+
+        // Merge mTab2 into the current group.
+        List<Tab> mergedTabs = new ArrayList<>(Arrays.asList(mTab1, mTab2));
+        when(mTabModel.getTabsInGroup(TAB_GROUP_ID)).thenReturn(mergedTabs);
+        when(mTab2.getTabGroupId()).thenReturn(TAB_GROUP_ID);
+
+        mTabGroupObserverCaptor.getValue().didMergeTabToGroup(mTab2, /* isDestinationTab= */ false);
+
+        // Header title should update to reflect 2 tabs.
+        assertEquals(
+                TabGroupTitleUtils.getDefaultTitle(mActivity, 2),
+                mModel.get(TabGridDialogProperties.HEADER_TITLE));
+    }
+
+    @Test
+    public void testTabGroupObserver_didMergeTabToGroup_DifferentGroup() {
+        List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1));
+        createTabGroup(tabGroup, TAB_GROUP_ID);
+        assertTrue(mMediator.onReset(tabGroup));
+
+        // Merge a tab into a different group.
+        Token otherGroupId = new Token(3L, 4L);
+        when(mTab2.getTabGroupId()).thenReturn(otherGroupId);
+
+        mTabGroupObserverCaptor.getValue().didMergeTabToGroup(mTab2, /* isDestinationTab= */ false);
+
+        // Header title should remain 1 tab.
+        assertEquals(
+                TabGroupTitleUtils.getDefaultTitle(mActivity, 1),
+                mModel.get(TabGridDialogProperties.HEADER_TITLE));
     }
 
     @Test
     public void destroy() {
         mMediator.destroy();
 
-        verify(mTabGroupModelFilter).removeObserver(mTabModelObserverCaptor.capture());
-        assertFalse(mCurrentTabGroupModelFilterSupplier.hasObservers());
+        verify(mTabModel).removeObserver(mTabModelObserverCaptor.capture());
+        assertFalse(mCurrentTabModelSupplier.hasObservers());
         verify(mDesktopWindowStateManager).removeObserver(mMediator);
         verify(mMessagingBackendService).removePersistentMessageObserver(any());
     }
@@ -1910,6 +1966,19 @@ public class TabGridDialogMediatorUnitTest {
     }
 
     @Test
+    public void testShowSendFeedback_PolicyDisabled() {
+        FeatureOverrides.newBuilder()
+                .enable(ChromeFeatureList.DATA_SHARING)
+                .param(TabGridDialogMediator.SHOW_SEND_FEEDBACK_PARAM, true)
+                .apply();
+
+        when(mFeedbackPolicyManager.isUserFeedbackAllowed()).thenReturn(false);
+
+        resetForDataSharing(/* isShared= */ true, GROUP_MEMBER1, GROUP_MEMBER2);
+        assertFalse(mModel.get(TabGridDialogProperties.SHOW_SEND_FEEDBACK));
+    }
+
+    @Test
     public void testCollaborationActivityMessageCard_Dismiss() {
         when(mDialogController.messageCardExists(MessageType.COLLABORATION_ACTIVITY))
                 .thenReturn(false);
@@ -1954,10 +2023,10 @@ public class TabGridDialogMediatorUnitTest {
                 .thenReturn(true);
         resetForDataSharing(/* isShared= */ true, GROUP_MEMBER1);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         assertTrue(mMediator.onReset(tabGroup));
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
 
         // We expect 2 invocations due to the #resetForDataSharing call.
         verify(mBottomSheetController, times(2)).requestShowContent(any(), eq(true));
@@ -1972,10 +2041,10 @@ public class TabGridDialogMediatorUnitTest {
 
         resetForDataSharing(/* isShared= */ false, GROUP_MEMBER1);
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, TAB1_ID, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         assertTrue(mMediator.onReset(tabGroup));
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
 
         verify(mBottomSheetController, never()).requestShowContent(any(), anyBoolean());
         verify(mTracker, never()).shouldTriggerHelpUi(anyString());
@@ -2008,7 +2077,7 @@ public class TabGridDialogMediatorUnitTest {
         assertFalse(mModel.get(TabGridDialogProperties.IS_CONTENT_SENSITIVE));
     }
 
-    private void remakeMediator(boolean withResetHandler, boolean withAnimSource) {
+    private void remakeMediator(@TabComponentId int componentId, boolean withAnimSource) {
         if (mMediator != null) {
             mMediator.destroy();
         }
@@ -2017,15 +2086,14 @@ public class TabGridDialogMediatorUnitTest {
                         mActivity,
                         mDialogController,
                         mModel,
-                        mCurrentTabGroupModelFilterSupplier,
-                        withResetHandler ? mTabSwitcherResetHandler : null,
+                        mCurrentTabModelSupplier,
                         mRecyclerViewPositionSupplier,
                         withAnimSource ? mAnimationSourceViewProvider : null,
                         mSnackbarManager,
                         mBottomSheetController,
                         mSharedImageTilesCoordinator,
                         mDataSharingTabManager,
-                        /* componentName= */ "",
+                        componentId,
                         mShowColorPickerPopupRunnable,
                         mModalDialogManager,
                         mDesktopWindowStateManager,
@@ -2058,7 +2126,8 @@ public class TabGridDialogMediatorUnitTest {
     @Test
     public void onLongPress_tabGroupParityEnabled() {
         CancelLongPressTabItemEventListener cancelLongPress =
-                mMediator.onLongPressEvent(TAB1_ID, mCardView, mTabGridContextMenuCoordinator);
+                TabGridDialogMediator.onLongPressEvent(
+                        TAB1_ID, mCardView, mTabGridContextMenuCoordinator);
         verify(mTabGridContextMenuCoordinator).showMenu(any(), eq(TAB1_ID), anyBoolean());
 
         assertNotNull(cancelLongPress);
@@ -2079,9 +2148,8 @@ public class TabGridDialogMediatorUnitTest {
     }
 
     private void resetForDataSharing(boolean isShared, GroupMember... members) {
-        int rootId = TAB1_ID;
         List<Tab> tabGroup = new ArrayList<>(Arrays.asList(mTab1, mTab2));
-        createTabGroup(tabGroup, rootId, TAB_GROUP_ID);
+        createTabGroup(tabGroup, TAB_GROUP_ID);
 
         GroupData groupData = SharedGroupTestHelper.newGroupData(COLLABORATION_ID1, members);
         if (isShared) {
@@ -2093,7 +2161,7 @@ public class TabGridDialogMediatorUnitTest {
         setupSyncedGroup(isShared);
 
         assertTrue(mMediator.onReset(tabGroup));
-        ShadowLooper.runUiThreadTasks();
+        RobolectricUtil.runAllBackgroundAndUi();
         verify(mDataSharingService, atLeastOnce())
                 .addObserver(mDataSharingServiceObserverCaptor.capture());
         DataSharingService.Observer observer = mDataSharingServiceObserverCaptor.getValue();
@@ -2114,20 +2182,19 @@ public class TabGridDialogMediatorUnitTest {
 
     private Tab prepareTab(int id, String title) {
         Tab tab = TabUiUnitTestUtils.prepareTab(id, title, GURL.emptyGURL());
-        doReturn(true).when(tab).isIncognito();
+        when(tab.isIncognito()).thenReturn(true);
         return tab;
     }
 
-    private void createTabGroup(List<Tab> tabs, int rootId, Token tabGroupId) {
-        when(mTabGroupModelFilter.tabGroupExists(tabGroupId)).thenReturn(true);
-        when(mTabGroupModelFilter.getTabsInGroup(tabGroupId)).thenReturn(tabs);
+    private void createTabGroup(List<Tab> tabs, Token tabGroupId) {
+        when(mTabModel.tabGroupExists(tabGroupId)).thenReturn(true);
+        when(mTabModel.getTabsInGroup(tabGroupId)).thenReturn(tabs);
         int lastShownTabId = tabs.get(0).getId();
-        when(mTabGroupModelFilter.getGroupLastShownTabId(tabGroupId)).thenReturn(lastShownTabId);
+        when(mTabModel.getGroupLastShownTabId(tabGroupId)).thenReturn(lastShownTabId);
         for (Tab tab : tabs) {
-            when(mTabGroupModelFilter.isTabInTabGroup(tab)).thenReturn(true);
-            when(tab.getRootId()).thenReturn(rootId);
+            when(mTabModel.isTabInTabGroup(tab)).thenReturn(true);
             when(tab.getTabGroupId()).thenReturn(tabGroupId);
-            when(mTabGroupModelFilter.getRelatedTabList(tab.getId())).thenReturn(tabs);
+            when(mTabModel.getRelatedTabList(tab.getId())).thenReturn(tabs);
         }
     }
 
